// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum LoggingBetaLogBucketLifecycleStateEnum {
  LoggingBetaLogBucketLifecycleStateEnumNO_VALUE_DO_NOT_USE = 0;
  LoggingBetaLogBucketLifecycleStateEnumLIFECYCLE_STATE_UNSPECIFIED = 1;
  LoggingBetaLogBucketLifecycleStateEnumACTIVE = 2;
  LoggingBetaLogBucketLifecycleStateEnumDELETE_REQUESTED = 3;
}

message LoggingBetaLogBucket {
  string name = 1;
  string description = 2;
  string create_time = 3;
  string update_time = 4;
  int64 retention_days = 5;
  bool locked = 6;
  LoggingBetaLogBucketLifecycleStateEnum lifecycle_state = 7;
  string parent = 8;
  string location = 9;
  bool enable_analytics = 10;
}

message ApplyLoggingBetaLogBucketRequest {
  LoggingBetaLogBucket resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteLoggingBetaLogBucketRequest {
  string service_account_file = 1;
  LoggingBetaLogBucket resource = 2;
}

message ListLoggingBetaLogBucketRequest {
  string service_account_file = 1;
  string Location = 2;
  string Parent = 3;
}

message ListLoggingBetaLogBucketResponse {
  repeated LoggingBetaLogBucket items = 1;
}

service LoggingBetaLogBucketService {
  rpc ApplyLoggingBetaLogBucket(ApplyLoggingBetaLogBucketRequest) returns (LoggingBetaLogBucket);
  rpc DeleteLoggingBetaLogBucket(DeleteLoggingBetaLogBucketRequest) returns (google.protobuf.Empty);
  rpc ListLoggingBetaLogBucket(ListLoggingBetaLogBucketRequest) returns (ListLoggingBetaLogBucketResponse);
}
